fixed spacing and about section

--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -2,6 +2,8 @@
   --primary-text-color: #000;
   --background-color: #EAE7DE;
   --header-height: calc(68px);
+  --lg-space: 120px;
+  --md-space:80px;
 }
 *{
   padding:0;
@@ -23,5 +25,11 @@ img{
   display: block;
 }
 
+/*******************/
+/*** GLOBAL CSS ****/
+/*******************/
+.section{
+  margin-top: var(--lg-space)
+}
 
 
