--- a/src/components/About/styles.module.scss
+++ b/src/components/About/styles.module.scss
@@ -1,37 +1,34 @@
-.about{
-    max-width: 1200px;
-    margin:120px auto 0;
-}
 .title{
     text-align: center;
     text-transform: uppercase;
     font-size: 48px;
 }
 .container{
-    margin-top: 40px;
+    max-width: 1200px;
+    margin: var(--md-space) auto 0 ;
     display: flex;
-    gap: 40px;
     justify-content: space-between;
     align-items: flex-start;
+    gap: 56px;
 }
 .imageContainer{
     flex-basis: 100%;
 }
 .image{
     width: 100%;
-
 }
-.aboutInfo{
+.textContainer{
     flex-basis: 100%;
+    padding-top: 16px;
 }
-.infoTitle{
-    font-size: 16px;
-    line-height: 1.5;
+.text{
+    font-size: 18px;
+    line-height: 1.6;
+    text-align: justify;
 }
-.infoDescription{
+.subtext{
     margin-top: 24px;
     font-size: 16px;
-    line-height: 1.5;
-    max-width: 500px;
+    line-height: 1.8;
     text-align: justify;
 }
