--- a/src/components/Music/styles.module.scss
+++ b/src/components/Music/styles.module.scss
@@ -1,18 +1,15 @@
-.music{
-    margin-top: 80px;
-}
 .title{
     text-align: center;
     text-transform: uppercase;
     font-size: 48px;
 }
 .musicList{
+    margin: 80px auto 0;
+    max-width: 1000px;
     display: flex;
-    gap: 40px;
     justify-content: space-between;
     align-items: center;
-    max-width: 1100px;
-    margin: 40px auto 0;
+    gap: 40px;
 }
 .playlist{
     aspect-ratio: 1;
